新增存档、读档、重新开始功能，地图更新至第4层

--- a/magic_tower/css/init.css
+++ b/magic_tower/css/init.css
@@ -139,6 +139,13 @@
     display: inline-block;
 }
 
+.resource_65 {
+    height: 46px;
+    width: 46px;
+    background: url(../images/main/resource_65.png);
+    display: inline-block;
+}
+
 .resource_80 {
     height: 46px;
     width: 46px;
