--- a/magic_tower/css/index.css
+++ b/magic_tower/css/index.css
@@ -104,3 +104,34 @@
     margin-top: 20px;
     background: url(../images/attribute/gray.png);
 }
+
+.message {
+    height: 300px;
+    width: 502px;
+    margin-left: 248px;
+    margin-top: 150px;
+    position: absolute;
+    display: none; /*默认隐藏*/
+    background: url(../images/message.png);
+}
+
+.load {
+    font-size: 23px;
+    font-weight: bold;
+    color: #ffffff;
+    position: absolute;
+    display: none; /*默认隐藏*/
+    background: url(../images/load.png);
+}
+
+.tips {
+    height: 50px;
+    width: 980px;
+    position: absolute;
+    margin-top: 600px;
+    padding-top: 20px;
+    padding-left: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    color: #000000;
+}
