--- a/magic_tower/css/index.css
+++ b/magic_tower/css/index.css
@@ -17,6 +17,7 @@
     height: 600px;
     width: 600px;
     position: absolute;
+    z-index: 1;
     margin-left: 200px;
     font-size: 0px; /* 消除块级元素之间的间隙*/
     background: url(../images/main/resource_1.png);
@@ -86,20 +87,39 @@
     text-align: center;
     background: url(../images/attribute/gray.png);
     font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
+    font-weight: 600;
+    color: #803472;
     display: inline-block;
 }
 
 .weapon_img {
     height: 50px;
     width: 50px;
+    background: url(../images/attribute/gray.png);
+    display: inline-block;
+}
+
+.armor_name {
+    height: 20px;
+    width: 90px;
+    text-align: center;
+    background: url(../images/attribute/gray.png);
+    font-size: 20px;
+    font-weight: 600;
+    color: #01fa70;
+    display: inline-block;
+}
+
+.armor_img {
+    height: 50px;
+    width: 50px;
+    background: url(../images/attribute/gray.png);
     display: inline-block;
 }
 
 .keys {
     height: 120px;
-    width: 150px;
+    width: 155px;
     margin-left: 23px;
     margin-top: 20px;
     background: url(../images/attribute/gray.png);
@@ -111,6 +131,7 @@
     margin-left: 248px;
     margin-top: 150px;
     position: absolute;
+    z-index: 2; /*隐藏元素总是堆叠在main上*/
     display: none; /*默认隐藏*/
     background: url(../images/message.png);
 }
@@ -120,8 +141,53 @@
     font-weight: bold;
     color: #ffffff;
     position: absolute;
+    z-index: 2; /*隐藏元素总是堆叠在main上*/
     display: none; /*默认隐藏*/
     background: url(../images/load.png);
+}
+
+.handbook {
+    height: 506px;
+    width: 506px;
+    margin-left: 246px;
+    margin-top: 46px;
+    position: absolute;
+    z-index: 2; /*隐藏元素总是堆叠在main上*/
+    display: none; /*默认隐藏*/
+    background: url(../images/attribute/gray.png);
+}
+
+.store {
+    height: 350px;
+    width: 506px;
+    margin-left: 246px;
+    margin-top: 120px;
+    position: absolute;
+    z-index: 2; /*隐藏元素总是堆叠在main上*/
+    display: none; /*默认隐藏*/
+    background: url(../images/attribute/gray.png);
+    text-align: center;
+}
+
+.store_title {
+    height: 80px;
+    width: 350px;
+    margin-left: 75px;
+    margin-top: 20px;
+    font-size: 28px;
+    color: #ffffff;
+}
+
+.store_content {
+    height: 35px;
+    width: 230px;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 20px;
+    margin-left: 125px;
+    margin-top: 10px;
+    background: lawngreen;
+    color: #000000;
 }
 
 .tips {
